remove git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-node_modules
-CadastroUsuarios
-Historico_Troca
-Livros_em_Alta
-Minha_Lista
-TRABALHO_OF_TI2
+Codigo/CadastroUsuarios
+Codigo/Historico_Troca
+Codigo/Livros_em_Alta
+Codigo/Minha_Lista
+Codigo/TRABALHO_OF_TI2
