--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-Codigo/CadastroUsuarios
-Codigo/Historico_Troca
-Codigo/Livros_em_Alta
-Codigo/Minha_Lista
-Codigo/TRABALHO_OF_TI2
+Codigo/CadastroUsuarios/
+Codigo/Historico_Troca/
+Codigo/Livros_em_Alta/
+Codigo/Minha_Lista/
+Codigo/TRABALHO_OF_TI2/
+Codigo/Projeto/pages/cadastrarusuario.php
+Codigo/Projeto/pages/login.php
