--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Codigo/Minha_Lista/
 Codigo/TRABALHO_OF_TI2/
 Codigo/Projeto/pages/cadastrarusuario.php
 Codigo/Projeto/pages/login.php
+Codigo/Projeto/pages/register.html
