--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-Codigo/CadastroUsuarios/
-Codigo/Historico_Troca/
-Codigo/Livros_em_Alta/
-Codigo/Minha_Lista/
-Codigo/TRABALHO_OF_TI2/
-Codigo/Projeto/pages/cadastrarusuario.php
-Codigo/Projeto/pages/login.php
-Codigo/Projeto/pages/register.html
+target
+.metadata/
