--- a/Codigo/Projeto/pom.xml
+++ b/Codigo/Projeto/pom.xml
@@ -99,6 +99,13 @@
         </dependency>
     </dependencies>
 
+    <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-servlets</artifactId>
+        <version>11.0.15</version>
+    </dependency>
+
+
     <build>
         <plugins>
             <!-- Plugin para empacotar como JAR executável -->
